test/js/node/test/parallel/test-stream-duplex.js.log.txt
 98 |         this._readableState.destroyed = value;
 99 |         this._writableState.destroyed = value;
100 |       }
101 |     }
102 |   }
103 | Duplex.fromWeb = function(pair, options) {
                               ^
error: Not implemented
      at internal:streams/duplex:103:26
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-duplex.js:76:25
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
